[ci skip] Prepare multi target 4846dbf18436b244069cff84f3ef30b61f10817c

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3171d17a",
+   "id": "d5eb29da",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9944ad42",
+   "id": "90382be9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be9ccfb",
+   "id": "1d42cb71",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6afe7db7",
+   "id": "da776e46",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d27064f0",
+   "id": "2d846403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ff71c8",
+   "id": "ac67e477",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bbfdd57",
+   "id": "7d5856b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c96ad325",
+   "id": "d0ac11fa",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "013fc868",
+   "id": "30034c06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9105176",
+   "id": "141a7204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa81aef",
+   "id": "5b916963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fbcf10c",
+   "id": "b90dce56",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea3f7caf",
+   "id": "6d388836",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17762e8",
+   "id": "dcabd79b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "059d1347",
+   "id": "b3b1d3c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe0b77ad",
+   "id": "c1ee1910",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d4b24e7",
+   "id": "a595bfec",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3c82521",
+   "id": "7dc555f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8bed6bc",
+   "id": "58468c37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8127f55",
+   "id": "18dc3628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abfae5ff",
+   "id": "bbfd8bdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4020bd55",
+   "id": "d875b52a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cba8156",
+   "id": "27456fd6",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d93bef43",
+   "id": "17aed96e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "483121f1",
+   "id": "c8b16fdd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daa35ff8",
+   "id": "37931ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63602fa9",
+   "id": "73ef4934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a7b4e5",
+   "id": "d5b15a68",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d56b9ade",
+   "id": "5fc4a953",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5720df1",
+   "id": "32b31524",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a737b8c6",
+   "id": "09ef5bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aaefa16",
+   "id": "f472abd9",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e10ba04",
+   "id": "f603ac4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb3bdaf6",
+   "id": "1fbecbf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62a5058",
+   "id": "0f58b4c1",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf365afc",
+   "id": "61376612",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cdfd82c",
+   "id": "481143f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06f6aa1c",
+   "id": "399f72ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,28 +679,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7efafbe6",
+   "id": "9815bf5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizon = 12\n",
-    "target_column_name = f\"load_mw_horizon_{horizon}h\"\n",
-    "predicted_target_column_name = f\"predicted_{target_column_name}\"\n",
+    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
+    "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
     "\n",
-    "target_df = prediction_time.join(\n",
+    "targets = prediction_time.join(\n",
     "    electricity.with_columns(\n",
-    "        [pl.col(\"load_mw\").shift(-horizon).alias(target_column_name)]\n",
+    "        [\n",
+    "            pl.col(\"load_mw\")\n",
+    "            .shift(-h)\n",
+    "            .alias(target_column_name_pattern.format(horizon=h))\n",
+    "            for h in horizons\n",
+    "        ]\n",
     "    ),\n",
     "    left_on=\"prediction_time\",\n",
     "    right_on=\"time\",\n",
-    ")\n",
-    "target = target_df[target_column_name].skb.mark_as_y()"
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15addcb2",
+   "id": "0253a751",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "horizon_of_interest = 12\n",
+    "target_column_name = target_column_name_pattern.format(horizon=horizon_of_interest)\n",
+    "predicted_target_column_name = \"predicted_\" + target_column_name\n",
+    "target = targets[target_column_name].skb.mark_as_y()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89ef8505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b57892c7",
+   "id": "7722c8e8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -734,7 +750,7 @@
     "altair.Chart(\n",
     "    pl.concat(\n",
     "        [\n",
-    "            target_df.skb.eval(),\n",
+    "            targets.skb.eval(),\n",
     "            predictions.rename(\n",
     "                {target_column_name: predicted_target_column_name}\n",
     "            ).skb.eval(),\n",
@@ -753,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c0415da",
+   "id": "7fa5a1e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a35d5325",
+   "id": "63dbfbf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18116e66",
+   "id": "a54e5f1b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -810,53 +826,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f30fb63f",
+   "id": "c3f2ef3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nested_cv_results = skrub.cross_validate(\n",
-    "    environment=predictions.skb.get_data(),\n",
-    "    pipeline=randomized_search,\n",
-    "    cv=ts_cv_5,\n",
-    "    scoring={\n",
-    "        \"r2\": get_scorer(\"r2\"),\n",
-    "        \"mape\": mape_scorer,\n",
-    "    },\n",
-    "    n_jobs=-1,\n",
-    "    return_pipeline=True,\n",
-    ").round(3)"
+    "# nested_cv_results = skrub.cross_validate(\n",
+    "#     environment=predictions.skb.get_data(),\n",
+    "#     pipeline=randomized_search,\n",
+    "#     cv=ts_cv_5,\n",
+    "#     scoring={\n",
+    "#         \"r2\": get_scorer(\"r2\"),\n",
+    "#         \"mape\": mape_scorer,\n",
+    "#     },\n",
+    "#     n_jobs=-1,\n",
+    "#     return_pipeline=True,\n",
+    "# ).round(3)\n",
+    "# nested_cv_results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30bbe22d",
+   "id": "ad259aaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nested_cv_results"
+    "# for outer_cv_idx in range(len(nested_cv_results)):\n",
+    "#     print(\n",
+    "#         nested_cv_results.loc[outer_cv_idx, \"pipeline\"]\n",
+    "#         .results_.loc[0]\n",
+    "#         .round(3)\n",
+    "#         .to_dict()\n",
+    "#     )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e36ab798",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for outer_cv_idx in range(len(nested_cv_results)):\n",
-    "    print(\n",
-    "        nested_cv_results.loc[outer_cv_idx, \"pipeline\"]\n",
-    "        .results_.loc[0]\n",
-    "        .round(3)\n",
-    "        .to_dict()\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "938d1311",
+   "id": "14f08acc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -872,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe66ae5",
+   "id": "77b3f16d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +911,8 @@
     "                skrub.selectors.filter_names(\n",
     "                    lambda name: name.startswith(\"load_mw_\") or name.endswith(\"_fr\"),\n",
     "                ),\n",
-    "            ]\n",
+    "            ],\n",
+    "            name=\"feature_subset\",\n",
     "        )\n",
     "    )\n",
     ").skb.apply(\n",
@@ -921,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2a6d69c",
+   "id": "e1307dbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bfd006f",
+   "id": "e0e539dd",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -949,42 +957,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcefa8c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nested_cv_results = skrub.cross_validate(\n",
-    "    environment=predictions.skb.get_data(),\n",
-    "    pipeline=randomized_search,\n",
-    "    cv=ts_cv_5,\n",
-    "    scoring={\n",
-    "        \"r2\": get_scorer(\"r2\"),\n",
-    "        \"mape\": mape_scorer,\n",
-    "    },\n",
-    "    n_jobs=-1,\n",
-    "    return_pipeline=True,\n",
-    ").round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1130ce3",
+   "id": "3c8a8f22",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "nested_cv_results"
+    "# nested_cv_results = skrub.cross_validate(\n",
+    "#     environment=predictions.skb.get_data(),\n",
+    "#     pipeline=randomized_search,\n",
+    "#     cv=ts_cv_5,\n",
+    "#     scoring={\n",
+    "#         \"r2\": get_scorer(\"r2\"),\n",
+    "#         \"mape\": mape_scorer,\n",
+    "#     },\n",
+    "#     n_jobs=-1,\n",
+    "#     return_pipeline=True,\n",
+    "# ).round(3)\n",
+    "# nested_cv_results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1e25aa4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
