--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e5561d2",
+   "id": "6bacdc68",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfba26db",
+   "id": "d6f3e187",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "067bbe9e",
+   "id": "de93dada",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f7670fd",
+   "id": "f793ce84",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8313509f",
+   "id": "789cf2a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "386e7ccd",
+   "id": "15b5872a",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136ca316",
+   "id": "78f6a863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc351e5d",
+   "id": "84023e8b",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba6bc81e",
+   "id": "101532ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "145a6626",
+   "id": "1c946b17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ff84b8",
+   "id": "18baffea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3df79d3",
+   "id": "bdae1ae2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0793c12e",
+   "id": "7a9a5a79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85497799",
+   "id": "2d50fa83",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec84390",
+   "id": "6a53a6ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "143df357",
+   "id": "e0bc6464",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4f5de50",
+   "id": "90c4af36",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fa3ed4d",
+   "id": "fa47a17d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031c1882",
+   "id": "7e73e3e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "824a43de",
+   "id": "50d73c58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6274c448",
+   "id": "f0819e0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8903c31c",
+   "id": "ed294ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27bf0e4",
+   "id": "a7e13f19",
    "metadata": {},
    "source": [
     "\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df5d6be3",
+   "id": "96dbced1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29ddc577",
+   "id": "2816e0eb",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e14364fa",
+   "id": "ffe43b64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7af7712",
+   "id": "0a884c1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f81d7f",
+   "id": "bd956e55",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f850b0b6",
+   "id": "a48b0394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc0e7fbd",
+   "id": "a5b7c241",
    "metadata": {},
    "source": [
     "\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88d6f806",
+   "id": "4626cf71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d93918a",
+   "id": "116b7f67",
    "metadata": {},
    "source": [
     "\n",
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b0c58c",
+   "id": "3c6319e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97da4045",
+   "id": "f176fdad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19483f2a",
+   "id": "f150430a",
    "metadata": {},
    "source": [
     "\n",
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f8e1fc",
+   "id": "44c2e757",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3ad7939",
+   "id": "36674124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53aa3da6",
+   "id": "3194f35c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,28 +679,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bec69e4",
+   "id": "628fb68d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizon = 12\n",
-    "target_column_name = f\"load_mw_horizon_{horizon}h\"\n",
-    "predicted_target_column_name = f\"predicted_{target_column_name}\"\n",
+    "horizons = range(1, 25)  # Forecasting horizons from 1 to 24 hours\n",
+    "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
     "\n",
-    "target_df = prediction_time.join(\n",
+    "targets = prediction_time.join(\n",
     "    electricity.with_columns(\n",
-    "        [pl.col(\"load_mw\").shift(-horizon).alias(target_column_name)]\n",
+    "        [\n",
+    "            pl.col(\"load_mw\")\n",
+    "            .shift(-h)\n",
+    "            .alias(target_column_name_pattern.format(horizon=h))\n",
+    "            for h in horizons\n",
+    "        ]\n",
     "    ),\n",
     "    left_on=\"prediction_time\",\n",
     "    right_on=\"time\",\n",
-    ")\n",
-    "target = target_df[target_column_name].skb.mark_as_y()"
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c40683",
+   "id": "8d4047b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "horizon_of_interest = 12\n",
+    "target_column_name = target_column_name_pattern.format(horizon=horizon_of_interest)\n",
+    "predicted_target_column_name = \"predicted_\" + target_column_name\n",
+    "target = targets[target_column_name].skb.mark_as_y()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b09ccff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eee8f40",
+   "id": "2b1867c7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -734,7 +750,7 @@
     "altair.Chart(\n",
     "    pl.concat(\n",
     "        [\n",
-    "            target_df.skb.eval(),\n",
+    "            targets.skb.eval(),\n",
     "            predictions.rename(\n",
     "                {target_column_name: predicted_target_column_name}\n",
     "            ).skb.eval(),\n",
@@ -753,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cb4b164",
+   "id": "ecfd576d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11943e22",
+   "id": "6d5e7d7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0a7aaf1",
+   "id": "769716c4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -810,53 +826,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8318a09f",
+   "id": "fd61d6d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nested_cv_results = skrub.cross_validate(\n",
-    "    environment=predictions.skb.get_data(),\n",
-    "    pipeline=randomized_search,\n",
-    "    cv=ts_cv_5,\n",
-    "    scoring={\n",
-    "        \"r2\": get_scorer(\"r2\"),\n",
-    "        \"mape\": mape_scorer,\n",
-    "    },\n",
-    "    n_jobs=-1,\n",
-    "    return_pipeline=True,\n",
-    ").round(3)"
+    "# nested_cv_results = skrub.cross_validate(\n",
+    "#     environment=predictions.skb.get_data(),\n",
+    "#     pipeline=randomized_search,\n",
+    "#     cv=ts_cv_5,\n",
+    "#     scoring={\n",
+    "#         \"r2\": get_scorer(\"r2\"),\n",
+    "#         \"mape\": mape_scorer,\n",
+    "#     },\n",
+    "#     n_jobs=-1,\n",
+    "#     return_pipeline=True,\n",
+    "# ).round(3)\n",
+    "# nested_cv_results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "673002a8",
+   "id": "df89f8c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nested_cv_results"
+    "# for outer_cv_idx in range(len(nested_cv_results)):\n",
+    "#     print(\n",
+    "#         nested_cv_results.loc[outer_cv_idx, \"pipeline\"]\n",
+    "#         .results_.loc[0]\n",
+    "#         .round(3)\n",
+    "#         .to_dict()\n",
+    "#     )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d677eaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for outer_cv_idx in range(len(nested_cv_results)):\n",
-    "    print(\n",
-    "        nested_cv_results.loc[outer_cv_idx, \"pipeline\"]\n",
-    "        .results_.loc[0]\n",
-    "        .round(3)\n",
-    "        .to_dict()\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a6bf3fb",
+   "id": "3841b890",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -872,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80770d79",
+   "id": "f2b3b9e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +911,8 @@
     "                skrub.selectors.filter_names(\n",
     "                    lambda name: name.startswith(\"load_mw_\") or name.endswith(\"_fr\"),\n",
     "                ),\n",
-    "            ]\n",
+    "            ],\n",
+    "            name=\"feature_subset\",\n",
     "        )\n",
     "    )\n",
     ").skb.apply(\n",
@@ -921,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d1007b",
+   "id": "3ba62661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06dce8e8",
+   "id": "93a1d6ff",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -949,42 +957,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9912711",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nested_cv_results = skrub.cross_validate(\n",
-    "    environment=predictions.skb.get_data(),\n",
-    "    pipeline=randomized_search,\n",
-    "    cv=ts_cv_5,\n",
-    "    scoring={\n",
-    "        \"r2\": get_scorer(\"r2\"),\n",
-    "        \"mape\": mape_scorer,\n",
-    "    },\n",
-    "    n_jobs=-1,\n",
-    "    return_pipeline=True,\n",
-    ").round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "387bf5c4",
+   "id": "02955bc9",
    "metadata": {
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "nested_cv_results"
+    "# nested_cv_results = skrub.cross_validate(\n",
+    "#     environment=predictions.skb.get_data(),\n",
+    "#     pipeline=randomized_search,\n",
+    "#     cv=ts_cv_5,\n",
+    "#     scoring={\n",
+    "#         \"r2\": get_scorer(\"r2\"),\n",
+    "#         \"mape\": mape_scorer,\n",
+    "#     },\n",
+    "#     n_jobs=-1,\n",
+    "#     return_pipeline=True,\n",
+    "# ).round(3)\n",
+    "# nested_cv_results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27489bd5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
